--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <title>Joseph Crispell | Home</title>
         <script type="text/javascript" src="methods.js" ></script>
-        <link href="default.css" rel="stylesheet" type="text/css">
+        <link href="/default.css" rel="stylesheet" type="text/css">
     </head>
 
     <body style="text-align: center;">
