Update To Index

--- a/BlogPosts/SRASubmission_06-04-17/SRASubmission_06-04-17.html
+++ b/BlogPosts/SRASubmission_06-04-17/SRASubmission_06-04-17.html
@@ -3,7 +3,7 @@
 
     <head>
         <title>Joseph Crispell | Blog - SRA Submission</title>
-        <link href="/default.css" rel="stylesheet" type="text/css">
+        <link href="default.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
