--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-
 <html>
 
     <head>
         <title>Joseph Crispell | Home</title>
-        <link href="https://josephcrispell.github.io/default.css" rel="stylesheet" type="text/css">
+        <link href="default.css" rel="stylesheet" type="text/css">
     </head>
 
     <body style="text-align: center;">
