--- a/BlogPosts/BuildingAWebsite_22-02-17/BuildingAWebsite_22-02-17.html
+++ b/BlogPosts/BuildingAWebsite_22-02-17/BuildingAWebsite_22-02-17.html
@@ -3,7 +3,7 @@
 
     <head>
         <title>Joseph Crispell | Blog - Building a website</title>
-        <link href="/default.css" rel="stylesheet" type="text/css">
+        <link href="default.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
@@ -11,10 +11,10 @@
         <!-- Insert Sidebar box -->
         <div id="sidebar" style="top: 43.5%">
             
-            <pageLink><a href="/index.html">Home</a></pageLink>
-            <pageLink><a href="/Blog.html">Blog</a></pageLink>
-            <pageLink><a href="/About.html">About</a></pageLink>
-            <pageLink><a href="/Outputs.html">Outputs</a></pageLink>
+            <pageLink><a href="index.html">Home</a></pageLink>
+            <pageLink><a href="Blog.html">Blog</a></pageLink>
+            <pageLink><a href="About.html">About</a></pageLink>
+            <pageLink><a href="Outputs.html">Outputs</a></pageLink>
         </div>
         
         <!-- Insert Title -->
