--- a/BlogPosts/EstimatingEffectiveSampleSize_14-04-17/EstimatingEffectiveSampleSize_14-04-17.html
+++ b/BlogPosts/EstimatingEffectiveSampleSize_14-04-17/EstimatingEffectiveSampleSize_14-04-17.html
@@ -3,7 +3,7 @@
 
     <head>
         <title>Joseph Crispell | Blog - ESS</title>
-        <link href="/JosephCrispell.github.io/BlogPosts/default.css" rel="stylesheet" type="text/css">
+        <link href="../../default.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
