Update To Index

--- a/BlogPosts/EstimatingEffectiveSampleSize_14-04-17/EstimatingEffectiveSampleSize_14-04-17.html
+++ b/BlogPosts/EstimatingEffectiveSampleSize_14-04-17/EstimatingEffectiveSampleSize_14-04-17.html
@@ -3,7 +3,8 @@
 
     <head>
         <title>Joseph Crispell | Blog - ESS</title>
-        <link href="../../default.css" rel="stylesheet" type="text/css">
+        <base href="josephcrispell.github.io/">
+        <link href="default.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
