Update To Index

--- a/BlogPosts/EstimatingEffectiveSampleSize_14-04-17/EstimatingEffectiveSampleSize_14-04-17.html
+++ b/BlogPosts/EstimatingEffectiveSampleSize_14-04-17/EstimatingEffectiveSampleSize_14-04-17.html
@@ -1,10 +1,11 @@
 
 <html>
 
+
+
     <head>
         <title>Joseph Crispell | Blog - ESS</title>
-        <base href="josephcrispell.github.io/">
-        <link href="default.css" rel="stylesheet" type="text/css">
+        <link href="../../default.css" rel="stylesheet" type="text/css">
     </head>
 
     <body>
