Change to About page

--- a/About.html
+++ b/About.html
@@ -37,7 +37,7 @@
                 of bovine tuberculosis - a respiratory disease of cattle.<br><br>
                 
                 I love all different kinds of sport and try to be outside whenever I can. My wife and I recently moved to Dublin from Glasgow, where we both studied at
-                the <a href="http://www.gla.ac.uk">University of Glasgow</a>, and we are loving exploring Ireland. My wife, Joanna Crispell, works at the
+                the <a href="http://www.gla.ac.uk">University of Glasgow</a>, and we are loving exploring Ireland. My wife, <a href="https://www.joannacrispell.com/">Joanna Crispell</a>, works at the
                 <a href="https://dublin.sciencegallery.com/">Science Gallery</a>.<br><br>
                 
                 You can find me on:<br>
