Editing Blog.html

--- a/Blog.html
+++ b/Blog.html
@@ -47,7 +47,7 @@
                     <div class="overlay">
                         <div class="text">
                             How is the Effective Sample Size calculated? <br><br>
-                            An attempt to calculate the ESS that is produced by the evolutionary analysis platform BEAST
+                            Estimating the ESS value produced by the evolutionary analysis platform BEAST
                         </div>
                     </div>
                 </div>
