Adding dates to Blog.html

--- a/Blog.html
+++ b/Blog.html
@@ -35,7 +35,7 @@
                     <img src="BlogPosts/BLAST_03-08-17/BLAST_Thumbnail.png" class="thumbnail">
                     <div class="overlay">
                         <div class="text">
-                            Creating and comparing sequences to a local BLAST database<br><br>
+                            Creating, and comparing sequences to, a local BLAST database (03-08-17)<br><br>
                         </div>
                     </div>
                 </div>
@@ -46,7 +46,7 @@
                     <img src="BlogPosts/EstimatingEffectiveSampleSize_14-04-17/EstimatingEffectiveSampleSize_Thumbnail.png" class="thumbnail">
                     <div class="overlay">
                         <div class="text">
-                            How is the Effective Sample Size calculated? <br><br>
+                            How is the Effective Sample Size calculated? (14-04-17)<br><br>
                             Estimating the ESS value produced by the evolutionary analysis platform BEAST
                         </div>
                     </div>
@@ -58,7 +58,7 @@
                     <img src="BlogPosts/md5Checksum_07-04-17/md5Checksum_Thumbnail.png" class="thumbnail">
                     <div class="overlay">
                         <div class="text">
-                            What is a file's md5sum? <br><br>
+                            What is a file's md5sum? (07-04-17)<br><br>
                             A brief description of what a file's md5sum is, and why it is useful
                         </div>
                     </div>
@@ -70,7 +70,7 @@
                     <img src="BlogPosts/SRASubmission_06-04-17/SRASubmission_Thumbnail.png" class="thumbnail">
                     <div class="overlay">
                         <div class="text">
-                            Submitting Raw Sequencing Reads to SRA <br><br>
+                            Submitting Raw Sequencing Reads to SRA (06-04-17)<br><br>
                             An outline of how to upload FASTQ files onto the
                             NCBI's Sequence Read Archive
                         </div>
@@ -83,7 +83,7 @@
                     <img src="BlogPosts/BenVorlich_01-03-17/BenVorlich_Thumbnail.JPG" class="thumbnail">
                     <div class="overlay">
                         <div class="text">
-                            Hike up Ben Vorlich (Loch Lomond) <br><br>
+                            Hike up Ben Vorlich (Loch Lomond) (01-03-17)<br><br>
                             Had a beautiful clear snowy day to walk up Ben Vorlich with a few friends
                         </div>
                     </div>
@@ -95,7 +95,7 @@
                     <img src="BlogPosts/BuildingAWebsite_22-02-17/BuildingAWebsite_Thumbnail.png" class="thumbnail">
                     <div class="overlay">
                         <div class="text">
-                            Building a website <br><br>
+                            Building a website (22-02-17)<br><br>
                             A brief description of how and why I've built my own website
                         </div>
                     </div>
