New blog post - latex code block

--- a/Blog.html
+++ b/Blog.html
@@ -30,6 +30,18 @@
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
             <br><br>
             
+            <a href="BlogPosts/LatexCodeBlock_13-09-17/LatexCodeBlock_13-09-17.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/LatexCodeBlock_13-09-17/LatexCodeBlock_Thumbnail.png" class="thumbnail">
+                        <div class="overlay">
+                        <div class="text">
+                            Inserting a LaTeX code block (13-09-17)<br><br>
+                            Insert a text block styled according to a particular programming language
+                        </div>
+                    </div>
+                </div>
+            </a>
+            
             <a href="BlogPosts/BLAST_03-08-17/BLAST_03-08-17.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
                     <img src="BlogPosts/BLAST_03-08-17/BLAST_Thumbnail.png" class="thumbnail">
