Changed size of headshot

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         
         <div class="thumbnailContainer" style="width: 25%;">
             <a href="About.html" style="text-decoration:none">
-                <img src="Headshot.jpg" class="thumbnail">
+                <img src="Headshot-resized.jpg" class="thumbnail">
                 <div class="overlay">
                     <div class="text" style="text-align:center; font-size: 200%;">
                         A little bit about myself, my work, and how to contact me <br><br>
