New post - Things to Remember

--- a/Blog.html
+++ b/Blog.html
@@ -30,6 +30,18 @@
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
             <br><br>
             
+            <a href="BlogPosts/ThingsToRemember_11-10-17/ThingsToRemember_11-10-17.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/ThingsToRemember_11-10-17/ThingsToRemember_Thumbnail.png" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            Pieces of code I need to remember (11-10-17)<br><br>
+                            A quick list of the useful pieces of code I always forget
+                        </div>
+                    </div>
+                </div>
+            </a>
+            
             <a href="BlogPosts/LatexCodeBlock_13-09-17/LatexCodeBlock_13-09-17.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
                     <img src="BlogPosts/LatexCodeBlock_13-09-17/LatexCodeBlock_Thumbnail.png" class="thumbnail">
