--- a/BlogPosts/ThingsToRemember_11-10-17/ThingsToRemember_11-10-17.html
+++ b/BlogPosts/ThingsToRemember_11-10-17/ThingsToRemember_11-10-17.html
@@ -112,7 +112,7 @@
             </p>
             
             <div id="codeBlock">
-                my $stringName = "Some string";
+                my $stringName = "Some string";<br>
                 $stringName =~ s/\R//g;<br>
             </div>
             
