New post - polygons

--- a/Blog.html
+++ b/Blog.html
@@ -30,6 +30,18 @@
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
             <br><br>
             
+            <a href="BlogPosts/GetPolygonsFromShapeFile_11-10-17/GetPolygonsFromShapeFile_11-10-17.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/GetPolygonsFromShapeFile_11-10-17/GetPolygonsFromShapeFile_Thumbnail.png" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            Getting polygon information from shape files (11-10-17)<br><br>
+                            Some R code to extract polygon coordinates and information from shape (.shp) files
+                        </div>
+                    </div>
+                </div>
+            </a>
+            
             <a href="BlogPosts/ThingsToRemember_11-10-17/ThingsToRemember_11-10-17.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
                     <img src="BlogPosts/ThingsToRemember_11-10-17/ThingsToRemember_Thumbnail.png" class="thumbnail">
