Update to outputs page

--- a/Outputs.html
+++ b/Outputs.html
@@ -44,6 +44,10 @@
             
             <h1>Presentations</h1>
             <p>
+                2017 - <a href="http://www.avtrw.co.uk/about-avtrw/">AVTRW (Irish Region) 51st Annual Scientific Meeting</a>
+                <br><br>
+                2017 - <a href="https://www.wur.nl/en/show/Inauguration-Prof.-dr.-Y.H.-Schukken-Special-Professor-Farm-Animal-Health.htm">Invited to mini-symposium organised by Ynte Schukken in honour of his inauguration</a>
+                <br><br>
                 2017 - <a href="https://www.eventbrite.co.uk/e/bovine-tuberculosis-mini-symposium-2017-tickets-34983099392\#">Bovine Tuberculosis - mini-symposium</a>
                 <br><br>
                 2015 - <a href="http://isvee2015.org/welcome-to-the-14th-isvee-conference-yucatan-mexico-2015/">International Symposium of Veterinary Epidemiology and Economics (ISVEE)</a>
