--- a/Outputs.html
+++ b/Outputs.html
@@ -60,7 +60,7 @@
             <h1>Tools</h1>
             
             <p>
-                All my code is available on <a href="https://github.com/JosephCrispell">GitHub</a>. I am currently working two tools: a bioinformatics pipeline to process Whole Genome Sequenced (WGS)
+                All my code is available on <a href="https://github.com/JosephCrispell">GitHub</a>. I am currently working on two tools: a bioinformatics pipeline to process Whole Genome Sequenced (WGS)
                 <i>Mycobacterium bovis</i> isolates, and a tool that can retrieve spoligotype information from WGS data.
             </p>
             
