--- a/Blog.html
+++ b/Blog.html
@@ -30,6 +30,18 @@
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
             <br><br>
             
+            <a href="BlogPosts/VirtualBoxUbuntu_09-11-17/VirtualBoxUbuntu_09-11-17.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/VirtualBoxUbuntu_09-11-17/VirtualBoxUbuntu_Thumbnail.png" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            Setting up Ubuntu with VirtualBox (09-11-17)<br><br>
+                            Instructions for how to run an Ubuntu computer on Mac/Windows machine
+                        </div>
+                    </div>
+                </div>
+            </a>
+            
             <a href="BlogPosts/GetPolygonsFromShapeFile_11-10-17/GetPolygonsFromShapeFile_11-10-17.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
                     <img src="BlogPosts/GetPolygonsFromShapeFile_11-10-17/GetPolygonsFromShapeFile_Thumbnail.png" class="thumbnail">
