--- a/BlogPosts/VirtualBoxUbuntu_09-11-17/VirtualBoxUbuntu_09-11-17.html
+++ b/BlogPosts/VirtualBoxUbuntu_09-11-17/VirtualBoxUbuntu_09-11-17.html
@@ -95,7 +95,7 @@
             </p>
             
             <div id="codeBlock">
-                $ sudo ln -s /media/sf_[YourSharedFolderName] /home/[YourUserName]/Desktop/[YourSharedFolderName]
+                $ sudo ln -s /media/sf_[Your shared folder name] /home/[YourUserName]/Desktop/[Your shared folder name]
             </div>
             
             <p>
