--- a/BlogPosts/VirtualBoxUbuntu_09-11-17/VirtualBoxUbuntu_09-11-17.html
+++ b/BlogPosts/VirtualBoxUbuntu_09-11-17/VirtualBoxUbuntu_09-11-17.html
@@ -4,6 +4,15 @@
     <head>
         <title>Joseph Crispell | Blog - VirtualBox</title>
         <link href="../../default.css" rel="stylesheet" type="text/css">
+        
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109829558-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'UA-109829558-1');
+        </script>
     </head>
 
     <body>
