New post about normalisation

--- a/Blog.html
+++ b/Blog.html
@@ -39,6 +39,19 @@
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
             <br><br>
             
+			<a href="BlogPosts/Normalisation_06-12-17/Normalisation_06-12-17.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/Normalisation_06-12-17/Normalisation_Thumbnail.png" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            Thinking about normalisation (06-12-17)<br><br>
+                            Trying to wrap my head about the information lost during normalisation
+                        </div>
+                    </div>
+                </div>
+            </a>
+
+			
             <a href="BlogPosts/VirtualBoxUbuntu_09-11-17/VirtualBoxUbuntu_09-11-17.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
                     <img src="BlogPosts/VirtualBoxUbuntu_09-11-17/VirtualBoxUbuntu_Thumbnail.png" class="thumbnail">
