--- a/BlogPosts/ThingsToRemember_11-10-17/ThingsToRemember_11-10-17.html
+++ b/BlogPosts/ThingsToRemember_11-10-17/ThingsToRemember_11-10-17.html
@@ -132,7 +132,7 @@
 			<div id="codeBlock">
                 Edit the "C:/Program Files/Java/jre1.X.X_X/bin" line in eclipse.ini file<br>
 				The eclipse.ini file can be found in the C:\Users\Joseph Crispell\eclipse\java-mars\eclipse\ folder on my windows machine
-				NOTE: if you rremove this line and the line (-vm) before, you'll never have to do this again!
+				NOTE: if you remove this line and the line (-vm) before, you'll never have to do this again!
             </div>
 			
 			<p>
@@ -172,6 +172,27 @@
             <div id="codeBlock">
 				date &lt;- format(Sys.Date(), "%d-%m-%y")
             </div>
+			
+			<p>
+                -&emsp;Laying out plots in R
+            </p>
+            
+            <div id="codeBlock">
+			
+				# Set the layout of the plots within the plotting window<br>
+				layout(matrix(c(1,1,3,2), nrow=2, ncol=2, byrow=TRUE))<br><br>
+
+				# Set the margin sizes<br>
+				par(mar=c(0.5,0.5,0.5,0.5))<br><br>
+
+				# Create the plots<br>
+				for(i in 1:3){<br>
+					&emsp;plot(x=NULL, y=NULL, xlim=c(0,1), ylim=c(0,1), xaxt="n", yaxt="n", xlab="", ylab="")<br>
+					&emsp;text(x=0.5, y=0.5, labels=i, cex=5)<br>
+				}<br>
+			</div>
+			
+			<img src="plottingLayout.png" width="35%" hspace="0.5%" vspace="1%">
         </div>
     </body>
 </html>
