Code Block Edit

--- a/BlogPosts/ThingsToRemember_11-10-17/ThingsToRemember_11-10-17.html
+++ b/BlogPosts/ThingsToRemember_11-10-17/ThingsToRemember_11-10-17.html
@@ -193,6 +193,17 @@
 			</div>
 			
 			<img src="plottingLayout.png" width="35%" hspace="0.5%" vspace="1%">
+			
+			<p>
+                -&emsp;Syncing a github repository
+            </p>
+            
+            <div id="codeBlock">
+				git add *<br>
+				git add . -A # Removes deleted files<br>
+				git commit -m "Write commit message here"<br>
+				git push
+			</div>
         </div>
     </body>
 </html>
