--- a/Blog.html
+++ b/Blog.html
@@ -39,6 +39,18 @@
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
             <br><br>
             
+            <a href="BlogPosts/Consensus_11-12-17/Consensus_11-12-17.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/Consensus_11-12-17/Consensus_Thumbnail.png" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            Building a consensus sequence (12-12-17)<br><br>
+                            Using Clustal to build a consesus of FASTA sequences in R
+                        </div>
+                    </div>
+                </div>
+            </a>
+            
 			<a href="BlogPosts/Normalisation_06-12-17/Normalisation_06-12-17.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
                     <img src="BlogPosts/Normalisation_06-12-17/Normalisation_Thumbnail.png" class="thumbnail">
@@ -50,7 +62,6 @@
                     </div>
                 </div>
             </a>
-
 			
             <a href="BlogPosts/VirtualBoxUbuntu_09-11-17/VirtualBoxUbuntu_09-11-17.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
