--- a/BlogPosts/ThingsToRemember_11-10-17/ThingsToRemember_11-10-17.html
+++ b/BlogPosts/ThingsToRemember_11-10-17/ThingsToRemember_11-10-17.html
@@ -204,6 +204,16 @@
 				git commit -m "Write commit message here"<br>
 				git push
 			</div>
+			
+			<p>
+                -&emsp;Get axis limits of current plot in R
+            </p>
+            
+            <div id="codeBlock">
+			
+				# Returns vector: c(xMin, xMax, yMin, yMax)<br>
+				axisLimits &lt;- par("usr") <br>
+			</div>
         </div>
     </body>
 </html>
