--- a/Blog.html
+++ b/Blog.html
@@ -39,6 +39,18 @@
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
             <br><br>
             
+            <a href="BlogPosts/BicycleHolder_31-01-18/BicycleHolder_31-01-18.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/BicycleHolder_31-01-18/BicycleHolder_Thumbnail.png" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            Building a bicycle stand (31-01-18)<br><br>
+                            Some plans for a stand-a-lone wooden two bicycle stand
+                        </div>
+                    </div>
+                </div>
+            </a>
+            
             <a href="BlogPosts/Consensus_11-12-17/Consensus_11-12-17.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
                     <img src="BlogPosts/Consensus_11-12-17/Consensus_Thumbnail.png" class="thumbnail">
