--- a/BlogPosts/ThingsToRemember_11-10-17/ThingsToRemember_11-10-17.html
+++ b/BlogPosts/ThingsToRemember_11-10-17/ThingsToRemember_11-10-17.html
@@ -84,7 +84,7 @@
             
             <div id="codeBlock">
                 # Open a connection to a file to read (open="r")<br>
-                conection &lt;- file(fileName, open="r")<br>
+                connection &lt;- file(fileName, open="r")<br>
                 <br>
                 # Get all lines from file and store in vector<br>
                 fileLines &lt;- readLines(connection)<br>
