--- a/BlogPosts/BenVorlich_01-03-17/BenVorlich_01-03-17.html
+++ b/BlogPosts/BenVorlich_01-03-17/BenVorlich_01-03-17.html
@@ -41,7 +41,7 @@
             
             <p> A couple of weeks ago my good friend <a href="https://stevenmcgeecallender.com/home.php">Steven McGee Callender</a> planned a hiking
 				trip in the Arrochar Alps. He managed to get me, <a href="https://twitter.com/amyjthompson">Amy Thompson</a> and
-                <a href="https://twitter.com/JustinPurefoy">Justin Purefoy</a> to join him. We selected Ben Vorlich as an acheivable
+                <a href="https://twitter.com/JustinPurefoy">Justin Purefoy</a> to join him. We selected Ben Vorlich as an achievable
                 goal for an inexperienced crew. We parked up on the North West edge of Loch Lomond and set off on the route described on
                 <a href="https://www.walkhighlands.co.uk/lochlomond/ben-vorlich-lomond.shtml">www.walkhighlands.co.uk</a>.
             </p>
