--- a/Blog.html
+++ b/Blog.html
@@ -39,6 +39,18 @@
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
             <br><br>
             
+            <a href="BlogPosts/GoogleAnalytics_01-02-18/GoogleAnalytics_01-02-18.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/GoogleAnalytics_01-02-18/GoogleAnalytics_Thumbnail.png" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            Using Google Analytics to track visitors (01-02-18)<br><br>
+                            Instructions about how to add Google Analytics to your webpage to monitor visitor usage
+                        </div>
+                    </div>
+                </div>
+            </a>
+            
             <a href="BlogPosts/BicycleHolder_31-01-18/BicycleHolder_31-01-18.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
                     <img src="BlogPosts/BicycleHolder_31-01-18/BicycleHolder_Thumbnail.png" class="thumbnail">
