--- a/Blog.html
+++ b/Blog.html
@@ -39,7 +39,19 @@
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
             <br><br>
             
-            <a href="BlogPosts/GoogleAnalytics_01-02-18/GoogleAnalytics_01-02-18.html" style="text-decoration:none">
+            <a href="BlogPosts/Phylogeny_20-02-18/Phylogeny_20-02-18.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/Phylogeny_20-02-18/Phylogeny_Thumbnail.png" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            Building a phylogenetic tree in R (20-02-18)<br><br>
+                            Getting started with building phylogenetic trees in R
+                        </div>
+                    </div>
+                </div>
+            </a>
+			
+			<a href="BlogPosts/GoogleAnalytics_01-02-18/GoogleAnalytics_01-02-18.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
                     <img src="BlogPosts/GoogleAnalytics_01-02-18/GoogleAnalytics_Thumbnail.png" class="thumbnail">
                     <div class="overlay">
