--- a/BlogPosts/Phylogeny_20-02-18/Phylogeny_20-02-18.html
+++ b/BlogPosts/Phylogeny_20-02-18/Phylogeny_20-02-18.html
@@ -142,7 +142,7 @@
                 &emsp;&emsp;optInv = TRUE, # Optimise proportion of variable sites<br>
                 &emsp;&emsp;model = substitutionModel, # Substitution model<br>
                 &emsp;&emsp;rearrangement="NNI", # Nearest Neighbour Interchanges<br>
-                &emsp;&emsp;control=controls)<br>
+                &emsp;&emsp;control=controls)<br><br>
 				
 				# Get the Maximum Likelihood tree<br>
 				mlTree <- fittingOutput$tree
