--- a/BlogPosts/Phylogeny_20-02-18/Phylogeny_20-02-18.html
+++ b/BlogPosts/Phylogeny_20-02-18/Phylogeny_20-02-18.html
@@ -60,7 +60,7 @@
             <div id="codeBlock">
                 # Load packages<br>
                 library(ape)<br>
-				ilbrary(phangorn)<br>
+				library(phangorn)<br>
             </div>
             
             <p>
