--- a/BlogPosts/Phylogeny_20-02-18/Phylogeny_20-02-18.html
+++ b/BlogPosts/Phylogeny_20-02-18/Phylogeny_20-02-18.html
@@ -140,7 +140,7 @@
 				fittingOutput <- optim.pml(likelihoodObject,<br>
                 &emsp;&emsp;optNni = TRUE, # Optimise topology<br>
                 &emsp;&emsp;optInv = TRUE, # Optimise proportion of variable sites<br>
-                &emsp;&emsp;model = substitutionModel, # Substitution model<br>
+                &emsp;&emsp;model = "JC", # Substitution model<br>
                 &emsp;&emsp;rearrangement="NNI", # Nearest Neighbour Interchanges<br>
                 &emsp;&emsp;control=controls)<br><br>
 				
