--- a/Blog.html
+++ b/Blog.html
@@ -38,7 +38,19 @@
             <br><br><br>
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
             <br><br>
-            
+
+            <a href="BlogPosts/MakingGiff_29-03-18/MakingGiff_29-03-18.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/MakingGiff_29-03-18/MakingGiff_Thumbnail.gif" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            Making a Giff in R (29-03-18)<br><br>
+                            Here's how I make my figures move!
+                        </div>
+                    </div>
+                </div>
+            </a>
+
             <a href="BlogPosts/Phylogeny_20-02-18/Phylogeny_20-02-18.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
                     <img src="BlogPosts/Phylogeny_20-02-18/Phylogeny_Thumbnail.png" class="thumbnail">
