--- a/Blog.html
+++ b/Blog.html
@@ -39,6 +39,19 @@
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
             <br><br>
 
+
+            <a href="BlogPosts/OverlayText_03-04-18/OverlayText_03-04-18.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/OverlayText_03-04-18/OverlayText_Thumbnail.gif" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            Avoiding overlapping text labels in R plot (03-04-18)<br><br>
+                            A description of an R function that avoids point labels overlapping in plot
+                        </div>
+                    </div>
+                </div>
+            </a>
+
             <a href="BlogPosts/MakingGiff_29-03-18/MakingGiff_29-03-18.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
                     <img src="BlogPosts/MakingGiff_29-03-18/MakingGiff_Thumbnail.gif" class="thumbnail">
