--- a/BlogPosts/MakingGiff_29-03-18/MakingGiff_29-03-18.html
+++ b/BlogPosts/MakingGiff_29-03-18/MakingGiff_29-03-18.html
@@ -70,7 +70,7 @@
             </div>
             
             <p>
-                Once you've generated your example PNG files. The next step is to use <a href="http://www.imagemagick.org/">Magick</a>. Since <a href="http://www.imagemagick.org/">Magick</a> can be ran from the terminal, I use the <font face="monospace" color="gray"> system()</font> function within <a href="https://www.r-project.org/">R</a>. You'll need to have installed <a href="http://www.imagemagick.org/">Magick</a> from <a href="http://www.imagemagick.org/script/download.php">here</a>. Once installed you'll need to check that "magick" is in your path - you can do this by opening the terminal and typing "magick -version".
+                Once you've generated your example PNG files. The next step is to use <a href="http://www.imagemagick.org/">Magick</a>. Since <a href="http://www.imagemagick.org/">Magick</a> can be ran from the terminal, I use the <c> system()</c> function within <a href="https://www.r-project.org/">R</a>. You'll need to have installed <a href="http://www.imagemagick.org/">Magick</a> from <a href="http://www.imagemagick.org/script/download.php">here</a>. Once installed you'll need to check that "magick" is in your path - you can do this by opening the terminal and typing "magick -version".
             </p>
             
             <div id="codeBlock">
