--- a/Blog.html
+++ b/Blog.html
@@ -40,6 +40,18 @@
             <br><br>
 
 
+            <a href="BlogPosts/HammockStand_28-04-18/HammockStand_28-04-18.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/HammockStand_28-04-18/HammockStand_Thumbnail.png" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            Building a hammock stand (28-04-18)<br><br>
+                            Some plans for a stand-a-lone wooden hammock stand
+                        </div>
+                    </div>
+                </div>
+            </a>
+
             <a href="BlogPosts/OverlayText_03-04-18/OverlayText_03-04-18.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
                     <img src="BlogPosts/OverlayText_03-04-18/OverlayText_Thumbnail.gif" class="thumbnail">
