--- a/BlogPosts/HammockStand_28-04-18/HammockStand_28-04-18.html
+++ b/BlogPosts/HammockStand_28-04-18/HammockStand_28-04-18.html
@@ -40,7 +40,7 @@
             <h1>Building a hammock stand&emsp;28-04-18</h1>
             
             <p>
-            Joanna's parents gave us a hammock a wee while ago. Now that the sun is out, I spent a Saturday building a hammock stand. Joanna and I had picked up two large posts (9 x 9 x 240cm) and a thick plank (22 x 4 x 240) that were perfect. Here are the plans:
+            Joanna's parents gave us a hammock a wee while ago. Now that the sun is out, I spent a Saturday building a hammock stand. Joanna and I had picked up two large posts (9 x 9 x 240cm) and a thick plank (22 x 4 x 240cm) that were perfect. Here are the plans:
             </p>
             
             <img src="HammockStand_Thumbnail.png" width="90%" hspace="0.5%" vspace="1%">
