--- a/Blog.html
+++ b/Blog.html
@@ -39,6 +39,17 @@
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
             <br><br>
 
+            <a href="BlogPosts/MultiThreading_04-05-18/MultiThreading_04-05-18.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/MultiThreading_04-05-18/MultiThreading_Thumbnail.png" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            Multithreading in Java (04-05-18)<br><br>
+                            Heres how to get started with multithreading in Java
+                        </div>
+                    </div>
+                </div>
+            </a>
 
             <a href="BlogPosts/HammockStand_28-04-18/HammockStand_28-04-18.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
