--- a/Blog.html
+++ b/Blog.html
@@ -39,6 +39,18 @@
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
             <br><br>
 
+            <a href="BlogPosts/BuildingAComputer_09-05-18/BuildingAComputer_09-05-18.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/BuildingAComputer_09-05-18/BuildingAComputer_Thumbnail.png" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            Building my computer (09-05-18)<br><br>
+                            A little post about assembling my new computer for work.
+                        </div>
+                    </div>
+                </div>
+            </a>
+
             <a href="BlogPosts/MultiThreading_04-05-18/MultiThreading_04-05-18.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
                     <img src="BlogPosts/MultiThreading_04-05-18/MultiThreading_Thumbnail.png" class="thumbnail">
