--- a/Blog.html
+++ b/Blog.html
@@ -44,7 +44,7 @@
                     <img src="BlogPosts/BuildingAComputer_09-05-18/BuildingAComputer_Thumbnail.png" class="thumbnail">
                     <div class="overlay">
                         <div class="text">
-                            Building my computer (09-05-18)<br><br>
+                            Building a computer (09-05-18)<br><br>
                             A little post about assembling my new computer for work.
                         </div>
                     </div>
