--- a/BlogPosts/BuildingAComputer_09-05-18/BuildingAComputer_09-05-18.html
+++ b/BlogPosts/BuildingAComputer_09-05-18/BuildingAComputer_09-05-18.html
@@ -63,7 +63,7 @@
                 </tr>
                 
                 <tr>
-                    <td><a href="https://www.komplett.ie/asus-prime-x370-pro/80047048/product"><img src="MotherBoard.jpeg" title="AMD motherboard - ASUS PRIME X370-PRO" style="float: left; margin-right: 1%; margin-bottom: 0.5em;" height=50 /></a> </td>
+                    <td><a href="https://www.komplett.ie/asus-prime-x370-pro/80047048/product"><img src="Motherboard.jpeg" title="AMD motherboard - ASUS PRIME X370-PRO" style="float: left; margin-right: 1%; margin-bottom: 0.5em;" height=50 /></a> </td>
                     <td>AMD motherboard - Asus prime X370-PRO</td>
                     <td>€139</td>
                 </tr>
