--- a/Blog.html
+++ b/Blog.html
@@ -39,6 +39,18 @@
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
             <br><br>
 
+			<a href="BlogPosts/ComparingPhylogenies_15-06-18/ComparingPhylogenies_15-06-18.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/ComparingPhylogenies_15-06-18/ComparingPhylogenies_Thumbnail.png" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            Comparing plotting phylogenetic trees (15-06-18)<br><br>
+                            A nice R plot to visually compare similar phylogenetic trees.
+                        </div>
+                    </div>
+                </div>
+            </a>
+			
             <a href="BlogPosts/BuildingAComputer_09-05-18/BuildingAComputer_09-05-18.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
                     <img src="BlogPosts/BuildingAComputer_09-05-18/BuildingAComputer_Thumbnail.png" class="thumbnail">
