--- a/Blog.html
+++ b/Blog.html
@@ -39,6 +39,18 @@
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
             <br><br>
 
+			<a href="BlogPosts/RAXML_27-06-18/RAXML_27-06-18.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/RAXML_27-06-18/RAXML_Thumbnail.png" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            Building a phylogenetic tree in R using RAxML (27-06-18)<br><br>
+                            How to take advantage of the powerful RAxML tool within R
+                        </div>
+                    </div>
+                </div>
+            </a>
+			
 			<a href="BlogPosts/ComparingPhylogenies_15-06-18/ComparingPhylogenies_15-06-18.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
                     <img src="BlogPosts/ComparingPhylogenies_15-06-18/ComparingPhylogenies_Thumbnail.png" class="thumbnail">
