--- a/Blog.html
+++ b/Blog.html
@@ -39,6 +39,18 @@
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
             <br><br>
 
+            <a href="BlogPosts/Newick_25-07-18/Newick_25-07-18.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/Newick_25-07-18/Newick_Thumbnail.png" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            Parsing the Newick formatted phylogenetic tree (25-07-18)<br><br>
+                            A wee post about the Newick format, and how to parse it.
+                        </div>
+                    </div>
+                </div>
+            </a>
+
 			<a href="BlogPosts/RAXML_27-06-18/RAXML_27-06-18.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
                     <img src="BlogPosts/RAXML_27-06-18/RAXML_Thumbnail.png" class="thumbnail">
