--- a/Blog.html
+++ b/Blog.html
@@ -39,6 +39,18 @@
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
             <br><br>
 
+            <a href="BlogPosts/CreatingAnRPackage_11-09-18/CreatingAnRPackage_11-09-18.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/CreatingAnRPackage_11-09-18/CreatingAnRPackage_Thumbnail.png" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            Creating an R package (11-09-18)<br><br>
+                            Heres how to create your own R package
+                        </div>
+                    </div>
+                </div>
+            </a>
+
             <a href="BlogPosts/MultiThreadingInR_27-08-18/MultiThreadingInR_27-08-18.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
                     <img src="BlogPosts/MultiThreadingInR_27-08-18/MultiThreadingInR_Thumbnail.png" class="thumbnail">
