--- a/BlogPosts/OverlayText_03-04-18/OverlayText_03-04-18.html
+++ b/BlogPosts/OverlayText_03-04-18/OverlayText_03-04-18.html
@@ -71,7 +71,7 @@
             </p>
 
             <p>
-                The <a href="https://www.r-project.org/">R</a> script <a href="https://github.com/JosephCrispell/GeneralTools/blob/master/OverlayTextFunctions_08-02-18.R">here</a> implements these steps into an <c>overlayText()</c> function. An interesting problem, and there is plenty of room for improvement!
+                I've <a href="../CreatingAnRPackage_11-09-18/CreatingAnRPackage_11-09-18.html">written</a> the above code into an R package described <a href="https://github.com/JosephCrispell/addTextLabels">here</a>. An interesting problem, and there is plenty of room for improvement!
             </p>
 
         </div>
